live pages site added

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         </section>
 
         <div class="button-container">
-            <button class="github-button" onclick="window.location.href='https://github.com/MehakSingh123/TR-103.github.io'">Training Report GitHub Repository</button>
-            <button class="github-button" onclick="window.location.href='https://github.com/SahilAroraYT/TR-103-stock-price-prediction'">Training Project Github Repository</button>
+            <button class="github-button" onclick="window.location.href='https://rajanky.github.io/TR-103-Daily-Diary/'">Training Report GitHub Repository</button>
+            <button class="github-button" onclick="window.location.href='https://github.com/rajanky/STOCK-PRICE-PREDICTION'">Training Project Github Repository</button>
         </div>
         
         <footer>
@@ -206,4 +206,5 @@
         <script src="script.js"></script>
     </div>
 </body>
+
 </html>
